// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkDown render html without escaing it 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      <span
        class="emotion-1"
      >
        Hello
      </span>
      <br />
      <span
        class="emotion-1"
      >
        World
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render paragraph inline 1`] = `
<DocumentFragment>
  .emotion-0>p {
  display: inline;
}

<span
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      <span
        class="emotion-1"
      >
        I am a paragraph.
      </span>
    </p>
    <p
      class="emotion-1"
    >
      <span
        class="emotion-1"
      >
        And a second one
      </span>
    </p>
  </span>
</DocumentFragment>
`;

exports[`MarkDown render simple string 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.emotion-2.emotion-2 {
  margin-top: 0;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.emotion-13:hover,
.emotion-13:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13:hover,
.emotion-13:focus {
  color: #1e4293;
}

.emotion-21 {
  font-family: 'Lucida Console','Monaco','Courier New','Courier',monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 5px;
  color: #4a4f62;
  background-color: #f6f5f7;
}

.emotion-21.emotion-21 {
  padding: 8px;
  color: #4a4f62;
  background-color: #f6f5f7;
}

<div
    class="emotion-0"
  >
    <h2
      class="emotion-1 emotion-2"
    >
      <span
        class="emotion-3"
      >
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span
        class="emotion-3"
      >
        I am a Markdown H2
      </span>
    </h2>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        I am a simple markdown with 
      </span>
      <strong>
        <span
          class="emotion-3"
        >
          strong
        </span>
      </strong>
      <span
        class="emotion-3"
      >
         
      </span>
      <em>
        <span
          class="emotion-3"
        >
          italic
        </span>
      </em>
      <span
        class="emotion-3"
      >
         content
      </span>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        You can find the complete reference 
      </span>
      <a
        class="emotion-13"
        href="https://commonmark.org/help/"
        to="https://commonmark.org/help/"
      >
        <span
          class="emotion-3"
        >
          here
        </span>
      </a>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        Invalid 
      </span>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        I can also render code
      </span>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-20 emotion-21"
      >
        const example = 1 // Inline code
      </span>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string with target blank 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.emotion-2.emotion-2 {
  margin-top: 0;
}

.emotion-13 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.emotion-13:hover,
.emotion-13:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-13:hover,
.emotion-13:focus {
  color: #1e4293;
}

.emotion-16 {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.emotion-16.emotion-16 {
  vertical-align: top;
}

.emotion-23 {
  font-family: 'Lucida Console','Monaco','Courier New','Courier',monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 5px;
  color: #4a4f62;
  background-color: #f6f5f7;
}

.emotion-23.emotion-23 {
  padding: 8px;
  color: #4a4f62;
  background-color: #f6f5f7;
}

<div
    class="emotion-0"
  >
    <h2
      class="emotion-1 emotion-2"
    >
      <span
        class="emotion-3"
      >
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span
        class="emotion-3"
      >
        I am a Markdown H2
      </span>
    </h2>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        I am a simple markdown with 
      </span>
      <strong>
        <span
          class="emotion-3"
        >
          strong
        </span>
      </strong>
      <span
        class="emotion-3"
      >
         
      </span>
      <em>
        <span
          class="emotion-3"
        >
          italic
        </span>
      </em>
      <span
        class="emotion-3"
      >
         content
      </span>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        You can find the complete reference 
      </span>
      <a
        class="emotion-13"
        href="https://commonmark.org/help/"
        rel="noopener noreferrer"
        target="_blank"
        to="https://commonmark.org/help/"
      >
        <span
          class="emotion-3"
        >
          here
        </span>
        <svg
          class="emotion-15 emotion-16"
          viewBox="0 0 24 24"
        >
          <path
            d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
          />
        </svg>
      </a>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        Invalid 
      </span>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-3"
      >
        I can also render code
      </span>
    </p>
    <p
      class="emotion-3"
    >
      <span
        class="emotion-22 emotion-23"
      >
        const example = 1 // Inline code
      </span>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
